# MagicCoinSnapper

./: .gitignore  .graphifyignore  AGENTS.md  App.razor  DESIGN.md  HowToTrainYourApp.md  MagicCoinSnapper.csproj  MagicCoinSnapper.sln  PLAN.md  PROJEKTUEBERSICHT.md  Program.cs  TRAINER_PLAN.md  UeberONNX.md  _DoGraphify.cmd  _Imports.razor  package-lock.json  package.json
Layout/: MainLayout.razor  MainLayout.razor.css
Models/: RawImageSample.cs
Pages/: Camera.razor  Camera.razor.css  Camera.razor.js  CameraView.razor  Collection.razor  Collection.razor.css  Collection.razor.js  Index.razor  NotFound.razor  Settings.razor  Ueber.razor
trainer/: PROJEKTUEBERSICHT.md  README.md  Start-Trainer-GUI.cmd  pyproject.toml  trainer_plan.md
trainer/docs/: UeberONNX.md  gui.md  model-management.md  training-faq.md
trainer/src/mcs_trainer/: __main__.py
trainer/src/mcs_trainer/app/: image_viewer.py  main.py  main_window.py  mask_editor.py  metadata_panel.py  workflow.py
trainer/src/mcs_trainer/cli/: __init__.py  main.py
trainer/src/mcs_trainer/dataset/: __init__.py  annotated_dataset.py  raw_zip.py  schemas.py  splits.py  validation.py
trainer/src/mcs_trainer/ml/: augmentations.py  dataset.py  metrics.py  model.py  model_registry.py  onnx_export.py  package_model.py  progress.py  train_loop.py
trainer/src/mcs_trainer/utils/: __init__.py  paths.py
trainer/tests/: conftest.py  test_cli.py  test_main_window.py  test_mask_editor.py  test_model_registry.py  test_progress.py  test_raw_zip.py  test_splits.py  test_validation_annotated.py  test_validation_raw.py
(+23 files in other folders)
